Frontend: fixed layout issue

--- a/frontend/client/app/app.component.css
+++ b/frontend/client/app/app.component.css
@@ -6,7 +6,7 @@ body {
 
 .posts-wrapper {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-column-gap: 15px;
   grid-row-gap: 10px;
 }
