--- a/frontend/client/app/components/post/post.component.css
+++ b/frontend/client/app/components/post/post.component.css
@@ -2,7 +2,6 @@
     display: inline-block;
     text-align: left;
     background-color: white;
-    width: 400px;
     padding: 20px 30px;
     border-radius: 5px;
 }
